@@ -3,7 +3,7 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=brasero
-pkgver=2.26.2
+pkgver=2.26.3
 pkgrel=1
 pkgdesc="A disc burning application for Gnome"
 arch=('i686' 'x86_64')
@@ -19,7 +19,7 @@ optdepends=('libburn: alternative back-end'
             'vcdimager: video project')
 install=brasero.install
 source=(http://ftp.gnome.org/pub/gnome/sources/brasero/2.26/brasero-${pkgver}.tar.bz2)
-md5sums=('328d24701d178ee13971efb28cd3dc35')
+md5sums=('edf1b2b489a4686b84674dc7dbbd8130')
 
 build() {
   cd "${srcdir}/brasero-${pkgver}"
@@ -28,7 +28,6 @@ build() {
   make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${pkgdir} install || return 1
 
   mkdir -p ${pkgdir}/usr/share/gconf/schemas
-  gconf-merge-schema ${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas --domain sound-juicer \
-    ${pkgdir}/etc/gconf/schemas/*.schemas
+  gconf-merge-schema ${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas --domain brasero ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
   rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
